--- a/renovate.json
+++ b/renovate.json
@@ -2,5 +2,15 @@
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
   "extends": [
     "config:base"
+  ],
+  "baseBranches": ["dev"],
+  "git-submodules": {
+    "enabled": true
+  },
+  "packageRules": [
+    {
+      "automerge": "true",
+      "automergeType": "branch"
+    }
   ]
 }
