Fix Github Actions

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -35,7 +35,14 @@ jobs:
         if: success()
         with:
           name: Geyser Fabric
-          path: patched-geyser/bootstrap/fabric/build/libs/Geyser-Fabric.jar
+          path: patched-geyser/bootstrap/mod/fabric/build/libs/Geyser-Fabric.jar
+          if-no-files-found: error
+      - name: Archive artifacts (Geyser NeoForge)
+        uses: actions/upload-artifact@a8a3f3ad30e3422c9c7b888a15615d19a852ae32
+        if: success()
+        with:
+          name: Geyser NeoForge
+          path: patched-geyser/bootstrap/mod/neoforge/build/libs/Geyser-NeoForge.jar
           if-no-files-found: error
       - name: Archive artifacts (Geyser Standalone)
         uses: actions/upload-artifact@ef09cdac3e2d3e60d8ccadda691f4f1cec5035cb
@@ -64,6 +71,13 @@ jobs:
         with:
           name: Geyser Velocity
           path: patched-geyser/bootstrap/velocity/build/libs/Geyser-Velocity.jar
+          if-no-files-found: error
+      - name: Archive artifacts (Geyser ViaProxy)
+        uses: actions/upload-artifact@a8a3f3ad30e3422c9c7b888a15615d19a852ae32
+        if: success()
+        with:
+          name: Geyser ViaProxy
+          path: patched-geyser/bootstrap/viaproxy/build/libs/Geyser-ViaProxy.jar
           if-no-files-found: error
       - name: Publish to Maven Repository
         if: ${{ success() && github.repository == 'Kalimero2Team/Thermalquelle' && (github.ref_name == 'dev' || github.ref_name == 'main') }}
