--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -6,7 +6,7 @@ jobs:
   build:
     strategy:
       matrix:
-        java: [ "17" , "21" ]
+        java: [ "21" ]
         os: [ "ubuntu-latest" ]
     runs-on: "${{ matrix.os }}"
     steps:
