--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,7 +13,7 @@ jobs:
       - name: "checkout repository"
         uses: "actions/checkout@v4"
       - name: "validate gradle wrapper"
-        uses: gradle/wrapper-validation-action@v3
+        uses: gradle/actions/wrapper-validation@v4
       - name: "setup jdk ${{ matrix.java }}"
         uses: "actions/setup-java@v4"
         with:
@@ -22,7 +22,7 @@ jobs:
       - name: "configure git"
         run: git config --global user.email "actions@github.com" && git config --global user.name "Github Actions"
       - name: "setup gradle"
-        uses: gradle/gradle-build-action@v3
+        uses: "gradle/actions/setup-gradle@v4"
       - name: "apply patches"
         run: "git submodule update --init && ./gradlew applyPatches"
       - name: "build"
@@ -80,7 +80,7 @@ jobs:
           path: patched-geyser/bootstrap/viaproxy/build/libs/Geyser-ViaProxy.jar
           if-no-files-found: error
       - name: Publish to Maven Repository
-        if: ${{ success() && github.repository == 'Kalimero2Team/Thermalquelle' && (github.ref_name == 'dev' || github.ref_name == 'main') }}
+        if: false # ${{ success() && github.repository == 'Kalimero2Team/Thermalquelle' && (github.ref_name == 'dev' || github.ref_name == 'main') }}
         working-directory: "patched-geyser"
         env:
           ORG_GRADLE_PROJECT_kalimero2Username: ${{ secrets.KALIMERO2_REPO_USERNAME }}
